--- a/Blog.WebUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/Blog.WebUI/Areas/Admin/Views/Category/Index.cshtml
@@ -12,10 +12,14 @@
             <i class="fas fa-table mr-1"></i> Categories
         </div>
         <div class="card-body">
+            <div class="spinner-border" role="status" style="display: none">
+                <span class="sr-only">Loading...</span>
+            </div>
             <div class="table-responsive">
                 <table class="table table-bordered" id="categoriesTable" style="width:100%">
                     <thead>
                     <tr>
+                        <th>Id</th>
                         <th>Image</th>
                         <th>Category Name</th>
                         <th>Description</th>
@@ -24,10 +28,13 @@
                         <th>Created Date</th>
                         <th>Last Modified Date</th>
                         <th>Last Modified By</th>
+                        <th>Actions</th>
+
                     </tr>
                     </thead>
                     <tfoot>
                     <tr>
+                        <th>Id</th>
                         <th>Image</th>
                         <th>Category Name</th>
                         <th>Description</th>
@@ -36,12 +43,15 @@
                         <th>Created Date</th>
                         <th>Last Modified Date</th>
                         <th>Last Modified By</th>
+                        <th>Actions</th>
                     </tr>
                     </tfoot>
                     <tbody>
                     @foreach (var category in Model.Data)
                     {
-                        <tr>
+                        <tr name="@category.CategoryName">
+                            <td>@category.CategoryId</td>
+
                             <td>
                                 <img src="@category.ImageUrl" alt="@category.CategoryName" class="my-image-table"/>
                             </td>
@@ -67,6 +77,10 @@
                                 <td>@category.LastModifiedBy</td>
                                 <td>@category.LastModifiedDate</td>
                             }
+                            <td>
+                                <button class="btn btn-primary btn-sm btn-update" data-id="@category.CategoryId"><span class="fas fa-edit"></span> Update</button>
+                                <button class="btn btn-danger btn-sm btn-delete" data-id="@category.CategoryName" style="margin-top: 7px;"><span class="fas fa-minus-circle"></span> Delete</button>
+                            </td>
                         </tr>
                     }
                     </tbody>
