--- a/Blog.WebUI/Areas/Admin/Views/Shared/_LayoutJsPartial.cshtml
+++ b/Blog.WebUI/Areas/Admin/Views/Shared/_LayoutJsPartial.cshtml
@@ -12,3 +12,6 @@
 <script src="https://cdn.datatables.net/buttons/1.7.1/js/buttons.bootstrap4.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@@10"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@@11"></script>
+
