--- a/Blog.WebUI/Areas/Admin/Views/Category/Index.cshtml
+++ b/Blog.WebUI/Areas/Admin/Views/Category/Index.cshtml
@@ -50,7 +50,7 @@
                     @foreach (var category in Model.Data)
                     {
                         <tr name="@category.CategoryName">
-                            <td>@category.CategoryId</td>
+                            <td>@(category.CategoryId[..18])...</td>
 
                             <td>
                                 <img src="@category.ImageUrl" alt="@category.CategoryName" class="my-image-table"/>
@@ -77,9 +77,9 @@
                                 <td>@category.LastModifiedBy</td>
                                 <td>@category.LastModifiedDate</td>
                             }
-                            <td>
-                                <button class="btn btn-primary btn-sm btn-update" data-id="@category.CategoryId"><span class="fas fa-edit"></span> Update</button>
-                                <button class="btn btn-danger btn-sm btn-delete" data-id="@category.CategoryName" style="margin-top: 7px;"><span class="fas fa-minus-circle"></span> Delete</button>
+                            <td style="display:flex; ">
+                                <button class="btn btn-primary btn-sm btn-update"  data-id="@category.CategoryId"><span class="fas fa-edit"></span> Update</button>
+                                <button class="btn btn-danger btn-sm btn-delete" style="margin-left: 15px"   data-id="@category.CategoryName" ><span class="fas fa-minus-circle"></span> Delete</button>
                             </td>
                         </tr>
                     }
