--- a/Blog.WebUI/Areas/Admin/Views/Category/_AddCategoryPartial.cshtml
+++ b/Blog.WebUI/Areas/Admin/Views/Category/_AddCategoryPartial.cshtml
@@ -18,12 +18,14 @@
                     <div class="form-group">    
                         <label asp-for="Description"></label>
                         <input class="form-control" asp-for="Description"/>
-                        <span class="text-danger" asp-validation-for="Description"></span>
                     </div>
+                     <div class="form-group">
+                        <label asp-for="Description"></label>
+                        <textarea class="form-control" asp-for="Description" rows="3"></textarea>
+                      </div>
                     <div class="form-group">
                         <label asp-for="File"></label>
                         <input type="file" asp-for="File" accept="image/*" id="uploadFile" name="FormFile" class="form-control-sm" />
-                        <span class="text-danger" asp-validation-for="File"></span>
                     </div>
                 </form>
             </div>
