--- a/Blog.WebUI/Areas/Admin/Views/Category/_AddCategoryPartial.cshtml
+++ b/Blog.WebUI/Areas/Admin/Views/Category/_AddCategoryPartial.cshtml
@@ -11,21 +11,22 @@
             </div>
             <div class="modal-body">
                 <form asp-action="Add" id="form-create-category" method="post" enctype="multipart/form-data">
+                    <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()"/>
+                    <div asp-validation-summary="All" class="text-danger" id="validation-summary" aria-hidden="false" style="display: none;"></div>
                     <div class="form-group">
                         <label asp-for="Name"></label>
                         <input class="form-control" asp-for="Name"/>
+                        <span class="text-danger" asp-validation-for="Name"></span>
                     </div>
-                    <div class="form-group">    
-                        <label asp-for="Description"></label>
-                        <input class="form-control" asp-for="Description"/>
-                    </div>
-                     <div class="form-group">
+                    <div class="form-group">
                         <label asp-for="Description"></label>
                         <textarea class="form-control" asp-for="Description" rows="3"></textarea>
-                      </div>
+                        <span class="text-danger" asp-validation-for="Description"></span>
+                    </div>
                     <div class="form-group">
                         <label asp-for="File"></label>
-                        <input type="file" asp-for="File" accept="image/*" id="uploadFile" name="FormFile" class="form-control-sm" />
+                        <input type="file" asp-for="File" accept="image/*" id="uploadFile" name="FormFile" class="form-control-sm"/>
+                        <span class="text-danger" asp-validation-for="File"></span>
                     </div>
                 </form>
             </div>
