--- a/Blog.WebUI/Areas/Admin/Views/Category/_UpdateCategoryPartial.cshtml
+++ b/Blog.WebUI/Areas/Admin/Views/Category/_UpdateCategoryPartial.cshtml
@@ -11,16 +11,20 @@
             </div>
             <div class="modal-body">
                 <form asp-action="Update" id="form-update-category" enctype="multipart/form-data">
+                    <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()"/>
+                    <div asp-validation-summary="All" class="text-danger" id="validation-summary" aria-hidden="false" style="display: none;"></div>
                     <input type="hidden" asp-for="Id"/>
                     <div class="form-group">
                         <label asp-for="Name"></label>
                         <input class="form-control" asp-for="Name"/>
+                        <span class="text-danger" asp-validation-for="Name"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="Description"></label>
                         <textarea class="form-control" asp-for="Description" rows="3"></textarea>
+                        <span class="text-danger" asp-validation-for="Description"></span>
                     </div>
-                    <img src="@Model.ImageUrl" alt="@Model.Name" class="my-image-table" style="display: block;margin: 0 auto 10px;"/>
+                    <img src="@Model.ImageUrl" alt="@Model.Name" class="my-image-table" style="display: block;margin: 0 auto 10px;" asp-append-version="true"/>
                     <div class="form-group">
                         <label asp-for="File">New Image</label>
                         <input type="file" asp-for="File" accept="image/*" id="uploadFile" name="FormFile" class="form-control-sm"/>
