--- a/Blog.WebUI/Areas/Admin/Views/Account/_AddUserPartial.cshtml
+++ b/Blog.WebUI/Areas/Admin/Views/Account/_AddUserPartial.cshtml
@@ -1,4 +1,5 @@
-@model Blog.Business.Features.Authentication.Commands.SignUpAdminCommand
+@using Blog.Core.Utilities.Results
+@model Blog.Core.Entities.DTOs.Authentication.Requests.SignUpRequest
 
 <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
@@ -14,54 +15,60 @@
                     <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()"/>
                     <div asp-validation-summary="All" class="text-danger" id="validation-summary" aria-hidden="false" style="display: none;"></div>
                     <div class="form-group">
-                        <label asp-for="SignUpRequest.FirstName">First name</label>
-                        <input class="form-control" asp-for="SignUpRequest.FirstName" placeholder="Please enter the first name"/>
-                        <span class="text-danger" asp-validation-for="SignUpRequest.FirstName"></span>
+                        <label asp-for="FirstName">First name</label>
+                        <input class="form-control" asp-for="FirstName" placeholder="Please enter the first name"/>
+                        <span class="text-danger" asp-validation-for="FirstName"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="SignUpRequest.LastName">Last name</label>
-                        <input class="form-control" asp-for="SignUpRequest.LastName" placeholder="Please enter the last name"/>
-                        <span class="text-danger" asp-validation-for="SignUpRequest.LastName"></span>
-                    </div>
-
-                    <div class="form-group">
-                        <label asp-for="SignUpRequest.Username">Username</label>
-                        <input class="form-control" asp-for="SignUpRequest.Username" placeholder="Please enter the username"/>
-                        <span class="text-danger" asp-validation-for="SignUpRequest.Username"></span>
+                        <label asp-for="LastName">Last name</label>
+                        <input class="form-control" asp-for="LastName" placeholder="Please enter the last name"/>
+                        <span class="text-danger" asp-validation-for="LastName"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="SignUpRequest.Email">Email</label>
-                        <input type="email" class="form-control" asp-for="SignUpRequest.Email" placeholder="Please enter the email"/>
-                        <span class="text-danger" asp-validation-for="SignUpRequest.Email"></span>
+                        <label asp-for="Username">Username</label>
+                        <input class="form-control" asp-for="Username" placeholder="Please enter the username"/>
+                        <span class="text-danger" asp-validation-for="Username"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Email">Email</label>
+                        <input type="email" class="form-control" asp-for="Email" placeholder="Please enter the email"/>
+                        <span class="text-danger" asp-validation-for="Email"></span>
                     </div>
                     <div class="form-group">
                         <label>Gender</label>
-                        <select asp-for="SignUpRequest.Gender">
+                        <select asp-for="Gender">
                             <option value="">Please select...</option>
                             <option value="M">Male</option>
                             <option value="F">Female</option>
-                            <span class="text-danger" asp-validation-for="SignUpRequest.Gender"></span>
+                            <span class="text-danger" asp-validation-for="Gender"></span>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label asp-for="SignUpRequest.Bio">Biography</label>
-                        <textarea class="form-control" asp-for="SignUpRequest.Bio" rows="3" placeholder="Please enter the biography"></textarea>
-                        <span class="text-danger" asp-validation-for="SignUpRequest.Bio"></span>
+                        <label asp-for="Bio">Biography</label>
+                        <textarea class="form-control" asp-for="Bio" rows="3" placeholder="Please enter the biography"></textarea>
+                        <span class="text-danger" asp-validation-for="Bio"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="SignUpRequest.Password">Password</label>
-                        <input type="password" class="form-control" asp-for="SignUpRequest.Password" placeholder="Please enter the password"/>
-                        <span class="text-danger" asp-validation-for="SignUpRequest.Password"></span>
+                        <label>Role</label>
+                        <select asp-for="Role" asp-items="ViewBag.Roles">
+                            <option>Please select...</option>
+                            <span class="text-danger" asp-validation-for="Role"></span>
+                        </select>
                     </div>
                     <div class="form-group">
-                        <label asp-for="SignUpRequest.ConfirmPassword">Confirm password</label>
-                        <input type="password" class="form-control" asp-for="SignUpRequest.ConfirmPassword" placeholder="Please confirm your password"/>
-                        <span class="text-danger" asp-validation-for="SignUpRequest.ConfirmPassword"></span>
+                        <label asp-for="Password">Password</label>
+                        <input type="password" class="form-control" asp-for="Password" placeholder="Please enter the password"/>
+                        <span class="text-danger" asp-validation-for="Password"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="SignUpRequest.Image"></label>
-                        <input type="file" asp-for="SignUpRequest.Image" accept="image/*" id="uploadFile" name="FormFile" class="form-control-sm"/>
-                        <span class="text-danger" asp-validation-for="SignUpRequest.Image"></span>
+                        <label asp-for="ConfirmPassword">Confirm password</label>
+                        <input type="password" class="form-control" asp-for="ConfirmPassword" placeholder="Please confirm your password"/>
+                        <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Image"></label>
+                        <input type="file" asp-for="Image" accept="image/*" id="uploadFile" name="FormFile" class="form-control-sm"/>
+                        <span class="text-danger" asp-validation-for="Image"></span>
                     </div>
                 </form>
             </div>
