--- a/Blog.WebUI/Areas/Admin/Views/Shared/_LayoutSidebarNavPartial.cshtml
+++ b/Blog.WebUI/Areas/Admin/Views/Shared/_LayoutSidebarNavPartial.cshtml
@@ -24,11 +24,11 @@
                     Posts
                 </a>
 
-                <a class="nav-link" asp-area="Admin" asp-controller="Comments" asp-action="Index">
+                <a class="nav-link" asp-area="Admin" asp-controller="Role" asp-action="Index">
                     <div class="sb-nav-link-icon">
-                        <i class="fas fa-comments"></i>
+                        <i class="fas fa-user-tag"></i>
                     </div>
-                    Comments
+                    Roles
                 </a>
 
                 <a class="nav-link" asp-area="Admin" asp-controller="Account" asp-action="Index">
